infrastructure/oauth2-proxy-longhorn/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn
  namespace: longhorn-system
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - longhorn.ops.last-try.org
    secretName: longhorn-tls
  rules:
  - host: longhorn.ops.last-try.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: oauth2-proxy-longhorn
            port:
              number: 4180
